# ants

./: .gitignore  CMakeLists.txt  README.md  ant.cc  ant.h  draw.cc  draw.h  main.cc  main.cpp  sprite.cc  sprite.h
